# django-template

./: .gitignore  pyproject.toml
blog/: admin.py  models.py  views.py
cart/: models.py  views.py
cart/api/: views.py
checkout/: models.py  views.py
common/: utils.py
foltz/: asgi.py  settings.py  urls.py  wsgi.py
polls/: models.py  urls.py  views.py
products/: filters.py  models.py  views.py
products/api/: serializers.py
quizzes/: models.py  urls.py  views.py
src/: manage.py
src/blog/: forms.py
src/cart/api/: serializers.py
src/cart/templatetags/: cart_tag.py
src/common/: utils.py
src/foltz/: urls.py
src/owner/: views.py
src/polls/: admin.py  views.py
src/products/: urls.py
src/products/api/: views.py
src/users/: admin.py  forms.py  models.py  urls.py
users/: forms.py  signals.py  views.py
