[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Pavel14701 <pavelkutia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-redis = "^5.4.0"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
django-filter = "^24.3"
stripe = "^11.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
